Make available for App Builder

--- a/force-app/main/default/lwc/lwcHello/lwcHello.html
+++ b/force-app/main/default/lwc/lwcHello/lwcHello.html
@@ -1,6 +1,6 @@
 <template>
 	<!--
-	<aura:component implements="flexipage:availableForAllPageTypes" access="global">
+	<aura:component>
 		<aura:attribute name="greeting" type="String" default="world" />
 		<lightning:card title="Aura_Hello" iconName="action:announcement">
 			<aura:set attribute="actions">
