--- a/force-app/main/default/lwc/lwcHello/lwcHello.html
+++ b/force-app/main/default/lwc/lwcHello/lwcHello.html
@@ -1,3 +1,16 @@
 <template>
-    
+	<!--
+	<aura:component implements="flexipage:availableForAllPageTypes" access="global">
+		<aura:attribute name="greeting" type="String" default="world" />
+		<lightning:card title="Aura_Hello" iconName="action:announcement">
+			<aura:set attribute="actions">
+				<lightning:button label="Count" onclick="{!c.count}" />
+			</aura:set>
+			<div class="slds-m-around_medium">
+				<p>Hello, {!v.greeting}!</p>
+				<lightning:input label="Name" value="{!v.greeting}" />
+			</div>
+		</lightning:card>
+	</aura:component>
+	-->
 </template>
