--- a/force-app/main/default/lwc/lwcHello/lwcHello.html
+++ b/force-app/main/default/lwc/lwcHello/lwcHello.html
@@ -1,6 +1,6 @@
 <template>
-	<!--
-		<lightning:card title="Aura_Hello" iconName="action:announcement">
+	<lightning-card title="LWC_Hello" icon-name="action:announcement">
+		<!--		
 			<aura:set attribute="actions">
 				<lightning:button label="Count" onclick="{!c.count}" />
 			</aura:set>
@@ -8,6 +8,6 @@
 				<p>Hello, {!v.greeting}!</p>
 				<lightning:input label="Name" value="{!v.greeting}" />
 			</div>
-		</lightning:card>
-	-->
+		-->
+	</lightning-card>
 </template>
