--- a/force-app/main/default/lwc/lwcHello/lwcHello.html
+++ b/force-app/main/default/lwc/lwcHello/lwcHello.html
@@ -1,11 +1,7 @@
 <template>
 	<lightning-card title="LWC_Hello" icon-name="action:announcement">
+		<lightning-button label="Count" onclick={count} slot="actions"></lightning-button>
 		<!--		
-			<aura:set attribute="actions">
-		-->
-		<lightning-button label="Count" onclick={count}></lightning-button>
-		<!--		
-			</aura:set>
 			<div class="slds-m-around_medium">
 				<p>Hello, {!v.greeting}!</p>
 				<lightning:input label="Name" value="{!v.greeting}" />
