--- a/force-app/main/default/lwc/lwcHello/lwcHello.html
+++ b/force-app/main/default/lwc/lwcHello/lwcHello.html
@@ -2,8 +2,8 @@
 	<lightning-card title="LWC_Hello" icon-name="action:announcement">
 		<lightning-button label="Count" onclick={count} slot="actions"></lightning-button>
 		<div class="slds-m-around_medium">
+			<p>Hello, {greeting}!</p>
 			<!--		
-				<p>Hello, {!v.greeting}!</p>
 				<lightning:input label="Name" value="{!v.greeting}" />
 			-->
 		</div>
