--- a/force-app/main/default/lwc/lwcHello/lwcHello.html
+++ b/force-app/main/default/lwc/lwcHello/lwcHello.html
@@ -3,7 +3,7 @@
 		<lightning-button label="Count" onclick={count} slot="actions"></lightning-button>
 		<div class="slds-m-around_medium">
 			<p>Hello, {greeting}!</p>
-			<lightning-input label="Name" value={greeting}></lightning-input>
+			<lightning-input label="Name" value={greeting} onchange={handleChange}></lightning-input>
 		</div>
 	</lightning-card>
 </template>
